--- a/mysite/blog/static/css/stijl.css
+++ b/mysite/blog/static/css/stijl.css
@@ -1,13 +1,22 @@
 body {
     background-color: brown;
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header{
     background-color: orange;
     height: 200px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
     padding-left: 50px;    
+}
+
+a{
+    color: black;
 }
 
 h1{
@@ -23,20 +32,23 @@ main{
     width: 45%;
     margin-left:40%;
     background-color: pink; 
+    margin-top:40px;
 }
 
 article {
     max-width: 100%;
+    margin-top: 40px;
     margin-bottom: 40px;
     background-color: pink;
     border: 3px solid white;
 }
 
-.post h2 a {
+h2 {
     color: orange;
 }
 
 footer{
     background-color: orange;
     height: 100px;
+    margin-top: auto;
 }
