--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,35 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mijn website</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/stijl.css' %}">
-    
-</head>
-<body>
-    <header>
-        <h1>Mijn website</h1>
-    </header>
-    <main class="container">
-        <div id="inhoud" class="row">
-            {% block content %}
-            {% for post in posts %}
-                <article class="col-12 post">
-                    <time class="date">{{ post.published_date }}</time>
-                    <h2><a href="">{{ post.title }}</a></h2>
-                    <p>{{ post.text|linebreaksbr }}</p>
-                </article>
-            {% endfor %}
-            {% endblock %}
-        </div>
-    </main>
-    <footer></footer>
-
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6r6AEswJ2hC+6ZXyKFIbbm3Yl3k6h" crossorigin="anonymous"></script>
-</body>
-</html>
+{% extends 'blog/base.html' %}
+{% block inhoud %}
+    <div id="inhoud">
+        {% for post in posts %}
+        <article class="post">
+            <time class="date">{{ post.published_date }}</time>
+            <h2><a href="{% url 'post_inhoud' pk=post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </article>
+        {% endfor %}
+        {% endblock %}
+    </div>
